[package]
name = "oci-ftrace-syscall-analyzer"
version = "0.1.3"
authors = ["Kenta Tada <Kenta.Tada@sony.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0"
clap = "2.31"
proc-mounts = "0.2.2"
libc = "0.2.72"
assert_cmd = "0.12"
quote = "=1.0.1"
libseccomp = "0.1.1"
